# auto_drive

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: em_planner.yaml  lattice_planner.yaml  planner_config.yaml  reference_line.yaml
include/: collision_detection.hpp  m_common.hpp  m_types.hpp  plan.hpp  quartic_polynomial.hpp  quintic_polynomial.hpp  reference_line.hpp  visualization.hpp
include/controller/: controller_node.h
include/optim/: b_spline_optim.hpp  optim_interface.hpp  qp_optim.hpp
include/planner/: cilqr.hpp  cilqr_constraints.hpp  cilqr_constraints_interface.hpp  cilqr_planner.hpp  cilqr_vehicle_model.hpp  em_planner.hpp  lattice_planner.hpp
launch/: controller.launch  plan.launch
rviz/: plan.rviz
scripts/: cilqr_visualization.py  create_npc.py  get_lane_info.py
src/: collision_detection.cpp  m_common.cpp  main.cpp  plan.cpp  reference_line.cpp  visualization.cpp
src/controller/: controller.cpp  controller_main.cpp  controller_node.cpp
src/optim/: b_spline_optim.cpp  qp_optim.cpp
src/planner/: cilqr.cpp  cilqr_constraints.cpp  cilqr_planner.cpp  em_planner.cpp  lattice_planner.cpp
waypoint_msgs/: Waypoint.msg
